--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "layout.html.twig" %}
 
 {% block title %}
 
@@ -15,6 +15,35 @@
 {% block body %}
     <h1>Register</h1>
 
+    {% block content %}
+        <div class="row">
+            <div class="col-xs-8 col-xs-push-2">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+                <h3>toto</h3>
+                {{ form_start(registrationForm) }}
+                {{ form_row(registrationForm.username) }}
+                {{ form_row(registrationForm.plainPassword) }}
+
+
+                {{ form_end(registrationForm) }}
+            </div>
+        </div>
+    {% endblock %}
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.username) }}
         {{ form_row(registrationForm.plainPassword) }}
