--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -38,9 +38,9 @@
 
     {% include 'components/_nav.html.twig' %}
 
-    {% block content '' %}
+{#    {% block content '' %}#}
 
-    {% include 'components/_footer.html.twig' %}
+{#    {% include 'components/_footer.html.twig' %}#}
 
 {% endblock %}
 
